--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
             <div class="flex items-center">
               <img class="small-logo" src="https://static.robloxden.com/strapi/robloxden_generated_613b2727d00b9b4f359d6f9152256d5a_95ea18cc72.png" alt="MM2 Logo - Murder Mystery 2">
               <div>
-                <div class="font-bold text-lg">Murder Mystery 2 (MM2)</div>
+                <div class="font-bold text-lg">Murder Mystery 2 Aimbot</div>
                 <div class="text-xs text-[--muted]">🟢 WORKING!</div>
               </div>
             </div>
@@ -104,7 +104,29 @@
 
           <div class="mt-3">
             <pre id="mm2" class="text-[12px] leading-snug bg-black/30 border border-white/10 rounded-xl p-3 no-scrollbar overflow-x-auto" aria-label="MM2 script">
-loadstring(game:HttpGet('https://raw.githubusercontent.com/xenamm2/mm2/refs/heads/main/main'))()
+loadstring(game:HttpGet('https://raw.githubusercontent.com/xenamm2/mm2/refs/heads/main/capybara-script'))()
+            </pre>
+          </div>
+        </article>
+
+        <!-- MM2 -->
+        <article class="card rounded-2xl border border-white/10 p-4 flex flex-col justify-between">
+          <div class="flex items-center justify-between">
+            <div class="flex items-center">
+              <img class="small-logo" src="https://static.robloxden.com/strapi/robloxden_generated_613b2727d00b9b4f359d6f9152256d5a_95ea18cc72.png" alt="MM2 Logo - Murder Mystery 2">
+              <div>
+                <div class="font-bold text-lg">Murder Mystery 2 Autofarm</div>
+                <div class="text-xs text-[--muted]">🟢 WORKING!</div>
+              </div>
+            </div>
+            <div class="flex items-center gap-2">
+              <button class="copy-small" onclick="copyScriptText('mm2af')">Copy</button>
+            </div>
+          </div>
+
+          <div class="mt-3">
+            <pre id="mm2af" class="text-[12px] leading-snug bg-black/30 border border-white/10 rounded-xl p-3 no-scrollbar overflow-x-auto" aria-label="MM2 script">
+loadstring(game:HttpGet('https://raw.githubusercontent.com/xenamm2/mm2/refs/heads/main/autofarm'))()
             </pre>
           </div>
         </article>
